@@ -28,6 +28,7 @@
 
 #include <iostream>
 #include <iomanip>
+#include <sstream>
 
 #include "file/nfile.h"
 #include "triangulation/ntriangulation.h"
@@ -565,6 +566,131 @@ void NTriangulation::insertTriangulation(const NTriangulation& X) {
     }
 
     gluingsHaveChanged();
+}
+
+void NTriangulation::insertConstruction(unsigned long nTetrahedra,
+        const int adjacencies[][4], const int gluings[][4][4]) {
+    if (nTetrahedra == 0)
+        return;
+
+    NTetrahedron** tet = new NTetrahedron*[nTetrahedra];
+
+    unsigned i, j;
+    NPerm p;
+
+    for (i = 0; i < nTetrahedra; i++)
+        tet[i] = new NTetrahedron();
+
+    for (i = 0; i < nTetrahedra; i++)
+        for (j = 0; j < 4; j++)
+            if (adjacencies[i][j] >= 0 &&
+                    ! tet[i]->getAdjacentTetrahedron(j)) {
+                p = NPerm(gluings[i][j][0], gluings[i][j][1],
+                    gluings[i][j][2], gluings[i][j][3]);
+                tet[i]->joinTo(j, tet[adjacencies[i][j]], p);
+            }
+
+    // It's not until here that we actually modify this triangulation.
+    ChangeEventBlock(this);
+
+    for (i = 0; i < nTetrahedra; i++)
+        addTetrahedron(tet[i]);
+
+    delete[] tet;
+}
+
+std::string NTriangulation::dumpConstruction() const {
+    std::ostringstream ans;
+    ans <<
+"/**\n";
+    if (! getPacketLabel().empty())
+        ans <<
+" * Triangulation: " << getPacketLabel() << "\n";
+    ans <<
+" * Code automatically generated by dumpConstruction().\n"
+" */\n"
+"\n";
+
+    if (tetrahedra.empty()) {
+        ans <<
+"/* This triangulation is empty.  No code is being generated. */\n";
+        return ans.str();
+    }
+
+    ans <<
+"/**\n"
+" * The following arrays describe the individual gluings of\n"
+" * tetrahedron faces.\n"
+" */\n"
+"\n";
+
+    unsigned long nTetrahedra = tetrahedra.size();
+    NTetrahedron* tet;
+    NPerm p;
+    unsigned long t;
+    int f, i;
+
+    ans << "const int adjacencies[" << nTetrahedra << "][4] = {\n";
+    for (t = 0; t < nTetrahedra; t++) {
+        tet = tetrahedra[t];
+
+        ans << "    { ";
+        for (f = 0; f < 4; f++) {
+            if (tet->getAdjacentTetrahedron(f)) {
+                ans << getTetrahedronIndex(tet->getAdjacentTetrahedron(f));
+            } else
+                ans << "-1";
+
+            if (f < 3)
+                ans << ", ";
+            else if (t != nTetrahedra - 1)
+                ans << "},\n";
+            else
+                ans << "}\n";
+        }
+    }
+    ans << "};\n\n";
+
+    ans << "const int gluings[" << nTetrahedra << "][4][4] = {\n";
+    for (t = 0; t < nTetrahedra; t++) {
+        tet = tetrahedra[t];
+
+        ans << "    { ";
+        for (f = 0; f < 4; f++) {
+            if (tet->getAdjacentTetrahedron(f)) {
+                p = tet->getAdjacentTetrahedronGluing(f);
+                ans << "{ ";
+                for (i = 0; i < 4; i++) {
+                    ans << p[i];
+                    if (i < 3)
+                        ans << ", ";
+                    else
+                        ans << " }";
+                }
+            } else
+                ans << "{ 0, 0, 0, 0 }";
+
+            if (f < 3)
+                ans << ", ";
+            else if (t != nTetrahedra - 1)
+                ans << " },\n";
+            else
+                ans << " }\n";
+        }
+    }
+    ans << "};\n\n";
+
+    ans <<
+"/**\n"
+" * The following code actually constructs a triangulation based on\n"
+" * the information stored in the arrays above.\n"
+" */\n"
+"\n"
+"NTriangulation tri;\n"
+"tri.insertConstruction(" << nTetrahedra << ", adjacencies, gluings);\n"
+"\n";
+
+    return ans.str();
 }
 
 } // namespace regina
